APY1/deploy-apy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apy1-deployment
  labels:
    app: apy1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: tier-apy1-backend
  template:
    metadata:
      labels:
        tier: tier-apy1-backend
    spec:
      containers:
      - name: cont-app1-backend
        image: 435606335423.dkr.ecr.eu-west-1.amazonaws.com/john-axel-apy:1.0.5
        ports:
          - name: web
            containerPort: 5000
            protocol: TCP
